--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,15 @@ input, select, textarea {
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
 		}
+		h1.title, h2.title {
+			border-bottom: solid 1px #ffffff;
+			width: -moz-max-content;
+			width: -webkit-max-content;
+			width: -ms-max-content;
+			width: max-content;
+			padding-bottom: 0.5rem;
+			margin: 0 0 2rem 0;
+		}
 
 	h1 {
 		font-size: 2.25rem;
@@ -640,9 +649,18 @@ input, select, textarea {
 	.image {
 		border-radius: 4px;
 		border: 0;
-		display: inline-block;
 		position: relative;
 	}
+        .image:face {
+			margin: 2.5rem 0;
+            height: auto;
+            width: auto;
+            border-radius: 25px;
+        }
+        .image.face img {
+            width: 100%;
+            border-radius: 100%;
+        }
 
 		.image:before {
 			pointer-events: none;
